--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship Game</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Battleship</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
+        <nav class="navbar">
+            <h1 class="logo">Battleship</h1>
+            <ul class="nav-links">
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/game.html">Game</a></li>
                 <li><a href="pages/rules.html">Rules</a></li>
                 <li><a href="pages/scores.html">Scores</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <p>This is a mock Battleship game.</p>
+        <h1>Welcome to Battleship</h1>
+        <p>This is a mock battle ship website</p>
     </main>
+
 </body>
 </html>
