--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/game.html">Game</a></li>
                 <li><a href="pages/rules.html">Rules</a></li>
-                <li><a href="pages/scores.html">Scores</a></li>
+                <li><a href="pages/scores.html">HighScores</a></li>
             </ul>
         </nav>
     </header>
