add responsive design

--- a/pages/game.html
+++ b/pages/game.html
@@ -18,7 +18,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="game.html" class="active">Game</a></li>
                 <li><a href="rules.html">Rules</a></li>
-                <li><a href="scores.html">Scores</a></li>
+                <li><a href="scores.html">HighScores</a></li>
             </ul>
         </nav>
     </header>
