--- a/pages/rules.html
+++ b/pages/rules.html
@@ -36,7 +36,7 @@
 
         <h2>Gameplay</h2>
         <ol>
-            <li>Players take turns calling out coordinates (e.g., "B4").</li>
+            <li>Players take turns calling out coordinates.</li>
             <li>If a ship occupies that coordinate, it's a hit; otherwise, it's a miss.</li>
             <li>Mark hits with "✔" and misses with "✖".</li>
             <li>When all parts of a ship are hit, that ship is sunk.</li>
