updated responsive design

--- a/pages/rules.html
+++ b/pages/rules.html
@@ -6,6 +6,7 @@
         <title>Sample Game Page</title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="../css/navbar.css"> 
+        <link rel="stylesheet" href="../css/rules.css"> 
     </head>
     <body>
         <header>
