--- a/pages/scores.html
+++ b/pages/scores.html
@@ -6,10 +6,11 @@
     <title>Battleship - High Scores</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/score.css">
 </head>
 <body>
 
-    <!-- ✅ 导航栏 -->
+    <!-- nav bar -->
     <header>
         <nav class="navbar">
             <h1 class="logo">Battleship</h1>
@@ -22,7 +23,7 @@
         </nav>
     </header>
 
-    <!-- ✅ 主要内容 -->
+    <!-- main content-->
     <main class="scores-container">
         <h1>High Scores</h1>
 
