updated comments and styles

--- a/pages/rules.html
+++ b/pages/rules.html
@@ -51,6 +51,7 @@
         <section class="credits">
             <h2>Credits</h2>
             <p>Created by: <strong>Yongsu Huang</strong></p>
+            <p>Background image from https://www.microsoft.com/en-us/p/navy-war-battleship-war-game</p>
             <ul class="credits-links">
                 <li><a href="mailto:huang.yongs@northeastern.edu">Email</a></li>
                 <li><a href="https://github.com/yongsuH" target="_blank">GitHub</a></li>
