--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1 class="logo">Battleship</h1>
+            <h1 class="logo">
+                <img src="assets/anchor-solid.svg" alt="Logo" class="logo-icon"> Battleship
+            </h1>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/game.html">Game</a></li>
