--- a/pages/game.html
+++ b/pages/game.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <!-- ✅ 导航栏 -->
+    <!-- nav bar -->
     <header>
         <nav class="navbar">
             <h1 class="logo">Battleship</h1>
@@ -23,11 +23,11 @@
         </nav>
     </header>
 
-    <!-- ✅ 主要内容 -->
+    <!-- main contents -->
     <main class="game-container">
         <h1>Game in Progress</h1>
 
-        <!-- ✅ 计时器 -->
+        <!-- timer -->
         <div class="game-info">
             <p>Time Elapsed: <span id="timer">00:01:05</span></p>
             <button class="restart-button">Restart</button>
@@ -36,7 +36,7 @@
         <!-- 2 boards -->
         <div class="game-boards">
             <div class="board">
-                <h2>Player Board</h2>
+                <h3><span style="color: rgb(26, 255, 0);">Player Board</span></h3>
                 <div class="grid">
                     <!-- 1st row -->
                     <div class="cell">⚫</div>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="board">
-                <h2>Enemy Board</h2>
+                <h3><span style="color: rgb(255, 94, 0);">Enemy Board</span></h3>
                 <div class="grid">
                     <!-- 1st row -->
                     <div class="cell"></div>
