--- a/pages/scores.html
+++ b/pages/scores.html
@@ -13,7 +13,9 @@
     <!-- nav bar -->
     <header>
         <nav class="navbar">
-            <h1 class="logo">Battleship</h1>
+            <h1 class="logo">
+                <img src="../assets/anchor-solid.svg" alt="Logo" class="logo-icon"> Battleship
+            </h1>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="game.html">Game</a></li>
